--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -5,14 +5,14 @@
 </ion-header>
 
 <ion-content padding>
-  <form (ngSubmit)="signupUser(); $event.preventDefault()">
+  <form [formGroup]="formGroup" (ngSubmit)="signupUser(); $event.preventDefault()">
     <ion-item>
       <ion-label stacked>Name*</ion-label>
-      <ion-input name="name" type="text"></ion-input>
+      <ion-input formControlName="name" type="text"></ion-input>
     </ion-item> 
     <ion-item>
       <ion-label stacked>Email*</ion-label>
-      <ion-input name="email" type="text"></ion-input>
+      <ion-input formControlName="email" type="text"></ion-input>
     </ion-item>
     <ion-list radio-group name="type">
       <ion-list-header>
@@ -30,54 +30,54 @@
     
     <ion-item>
       <ion-label stacked>CPF or CNPJ</ion-label>
-      <ion-input name="cpfOrCnpj" type="text"></ion-input>
+      <ion-input formControlName="cpfOrCnpj" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Password*</ion-label>
-      <ion-input name="password" type="password"></ion-input>
+      <ion-input formControlName="password" type="password"></ion-input>
     </ion-item> 
     <ion-item>
       <ion-label stacked>Logradouro*</ion-label>
-      <ion-input name="logradouro" type="text"></ion-input>
+      <ion-input formControlName="logradouro" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Number*</ion-label>
-      <ion-input name="number" type="text"></ion-input>
+      <ion-input formControlName="number" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Complement</ion-label>
-      <ion-input name="complement" type="text"></ion-input>
+      <ion-input formControlName="complement" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>neighborhood</ion-label>
-      <ion-input name="neighborhood" type="text"></ion-input>
+      <ion-input formControlName="neighborhood" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Postal Code*</ion-label>
-      <ion-input name="postalCode" type="text"></ion-input>
+      <ion-input formControlName="postalCode" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Phone 1*</ion-label>
-      <ion-input name="phone1" type="text"></ion-input>
+      <ion-input formControlName="phone1" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Phone 2</ion-label>
-      <ion-input name="phone2" type="text"></ion-input>
+      <ion-input formControlName="phone2" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Phone 3</ion-label>
-      <ion-input name="phone3" type="text"></ion-input>
+      <ion-input formControlName="phone3" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>State*</ion-label>
-      <ion-select name="stateId" (ionChange)="updateCidades()">
+      <ion-select formControlName="stateId" (ionChange)="updateCidades()">
         <ion-option value="1">Minas Gerais</ion-option>
         <ion-option value="2">São Paulo</ion-option>
       </ion-select>
     </ion-item>
     <ion-item>
       <ion-label stacked>City*</ion-label>
-      <ion-select name="cityId">
+      <ion-select formControlName="cityId">
         <ion-option value="1">Uberlândia</ion-option>
         <ion-option value="2">Campinas</ion-option>
       </ion-select>
