--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -10,10 +10,12 @@
       <ion-label stacked>Name*</ion-label>
       <ion-input formControlName="name" type="text"></ion-input>
     </ion-item> 
+    <p class="danger" *ngIf="formGroup.controls.name.dirty && formGroup.controls.name.errors" margin-left>Invalid value</p>
     <ion-item>
       <ion-label stacked>Email*</ion-label>
       <ion-input formControlName="email" type="text"></ion-input>
     </ion-item>
+    <p class="danger" *ngIf="formGroup.controls.email.dirty && formGroup.controls.email.errors" margin-left>Invalid value</p>
     <ion-list radio-group name="type">
       <ion-list-header>
         Client type
@@ -32,18 +34,22 @@
       <ion-label stacked>CPF or CNPJ</ion-label>
       <ion-input formControlName="cpfOrCnpj" type="text"></ion-input>
     </ion-item>
+    <p class="danger" *ngIf="formGroup.controls.cpfOrCnpj.dirty && formGroup.controls.cpfOrCnpj.errors" margin-left></p>
     <ion-item>
       <ion-label stacked>Password*</ion-label>
       <ion-input formControlName="password" type="password"></ion-input>
     </ion-item> 
+    <p class="danger" *ngIf="formGroup.controls.password.dirty && formGroup.controls.password.errors" margin-left>Invalid value</p>
     <ion-item>
       <ion-label stacked>Logradouro*</ion-label>
       <ion-input formControlName="logradouro" type="text"></ion-input>
     </ion-item>
+    <p class="danger" *ngIf="formGroup.controls.logradouro.dirty && formGroup.controls.logradouro.errors" margin-left>Invalid value</p>
     <ion-item>
       <ion-label stacked>Number*</ion-label>
       <ion-input formControlName="number" type="text"></ion-input>
     </ion-item>
+    <p class="danger" *ngIf="formGroup.controls.number.dirty && formGroup.controls.number.errors" margin-left>Invalid value</p>
     <ion-item>
       <ion-label stacked>Complement</ion-label>
       <ion-input formControlName="complement" type="text"></ion-input>
@@ -56,10 +62,12 @@
       <ion-label stacked>Postal Code*</ion-label>
       <ion-input formControlName="postalCode" type="text"></ion-input>
     </ion-item>
+    <p class="danger" *ngIf="formGroup.controls.postalCode.dirty && formGroup.controls.postalCode.errors" margin-left>Invalid value</p>
     <ion-item>
       <ion-label stacked>Phone 1*</ion-label>
       <ion-input formControlName="phone1" type="text"></ion-input>
     </ion-item>
+    <p class="danger" *ngIf="formGroup.controls.phone1.dirty && formGroup.controls.phone1.errors" margin-left>Invalid value</p>
     <ion-item>
       <ion-label stacked>Phone 2</ion-label>
       <ion-input formControlName="phone2" type="text"></ion-input>
@@ -80,6 +88,6 @@
         <ion-option *ngFor="let city of cities" [value]="city.id">{{city.name}}</ion-option>
       </ion-select>
     </ion-item>
-    <button ion-button block type="submit">Create account</button>
+    <button ion-button block type="submit" [disabled]="formGroup.invalid">Create account</button>
   </form>
 </ion-content>
