select address page

--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -25,8 +25,9 @@
       <h1 item-end>{{totalValueCart()}}</h1>
     </ion-item>
     <ion-item *ngIf="totalValueCart() <= 0">
-      <h1>Seu carrinho esta vazio</h1>
+      <h1>Your cart is empty</h1>
     </ion-item>
   </ion-list>
   <button ion-button block (click)="keepBuying()">Continuar comprando</button>
+  <button ion-button color="secondary" block (click)="checkOut()">Finalize Order</button>
 </ion-content>
