--- a/src/pages/pick-address/pick-address.html
+++ b/src/pages/pick-address/pick-address.html
@@ -12,7 +12,7 @@
     <ion-list-header>
       Select Address
     </ion-list-header>
-    <button ion-item *ngFor="let item of items">
+    <button ion-item *ngFor="let item of items" (click)="nextPage(item)">
       <h2>{{item.logradouro}}, {{item.number}}</h2>
       <p>{{item.complement}} {{item.neighborhood}} CEP {{item.postalCode}}</p>
       <p>{{item.city.name}}, {{item.city.state.name}}</p>
