--- a/src/pages/order-confirmation/order-confirmation.html
+++ b/src/pages/order-confirmation/order-confirmation.html
@@ -69,4 +69,7 @@
       <h3>Bank slip payment</h3>
       </ion-item>
   </ion-card>
+
+  <button ion-button block (click)="checkout()">Confirm order</button>
+  <button ion-button block outline (click)="back()">Back</button>
 </ion-content>
